# cpp2final

./: .travis.yml  CMakeLists.txt  README.md  gtest.cmake
src/: card.cpp  card.h  funcs.cpp  main.cpp
test/: tests.cpp
